# simple-gltf-renderer

./: .gitignore  Cargo.toml  README.md  build.rs
res/shaders/: gltf_pbr.json  irradiance_convolution.frag  pbr.frag  pbr.vert
res/shaders/inner/: blit.frag  cubemap.vert  irradiance_convolution.frag  prefilter.frag  screen.vert  skybox.frag  skybox.vert
src/: camera.rs  engine.rs  env_map.rs  gltf_scene.rs  graphics.rs  inner_pipelines.rs  light.rs  main.rs  material.rs  mesh.rs  render_target.rs  shader.rs  texture.rs  vertex.rs
