[package]
name = "simple-gltf-renderer"
version = "0.1.0"
authors = ["PepcyCh <pepsich86@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23"
winit = "0.22"
cgmath = "0.17"
futures = "0.3"
anyhow = "1.0"
bytemuck = { version = "1.5", features = [ "derive" ] }
shaderc = "0.7"
serde_json = "1.0"
byte-slice-cast = "1.0"

[dependencies.wgpu]
version = "0.7"
features = ["vulkan-portability"]

[dependencies.gltf]
version = "0.15"
features = ["names", "import"]
